2010-09-22  Robin Getz  <robin.getz@analog.com>

	* config/bfin-defs.h (IS_EMUDAT): New define.
	* config/bfin-parse.y: Accept EMUDAT for any register move.

2010-09-22  Robin Getz  <robin.getz@analog.com>

	* config/bfin-parse.y: Improve error messages.

2010-09-22  Robin Getz  <robin.getz@analog.com>

	* config/bfin-parse.y (DBG): Fix regno encoding.
	(DBGCMPLX): Likewise.

2010-09-22  Robin Getz  <robin.getz@analog.com>

	* config/bfin-lex.l: Accept multibyte chars in symbol names.

2010-09-22  Robin Getz  <robin.getz@analog.com>

	* config/bfin-defs.h (statusflags): Add AC0_COPY, V_COPY, and RND_MOD.
	* config/bfin-lex.l: Tokenize AC0_COPY, V_COPY, and RND_MOD.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-aux.h (bfin_gen_pseudochr): New prototype.
	* config/tc-bfin.c (bfin_gen_pseudochr): New function.
	* config/bfin-parse.y: Call bfin_gen_pseudochr for OUTC tokens.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-lex.l (abort): Accept case-insensitive abort insn.
	* config/bfin-parse.y (ABORT): Handle the ABORT token.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* config/tc-bfin.c (bfin_cpus[]): Add 0.2 for bf512/bf514/bf516/bf518.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* doc/c-bfin.texi (-mcpu): Add bf592.
	* config/tc-bfin.c (bfin_cpu_type): Add BFIN_CPU_BF592.
	(bfin_cpus[]): Add 0.0/0.1 for bf592.

2010-09-22  Mike Frysinger  <vapier@gentoo.org>

	* config/tc-bfin.c (comment_chars): Add #.

2010-09-20  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/tc-arm.c (arm_cpus): Correct canonical names for Cortex CPUs.

2010-09-20  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (tc_gen_reloc): Remove hack around
	bfd_perform_reloc for OBJ_ELF.

2010-09-17  Tejas Belagod  <tejas.belagod@arm.com>

	* config/tc-arm.c (do_t_ldmstm): Add logic to handle single-register
	list for ldm/stm.

2010-09-17  Tejas Belagod  <tejas.belagod@arm.com>
